; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/vxge/extr_vxge-traffic.c_vxge_hw_vpath_alarm_process.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/vxge/extr_vxge-traffic.c_vxge_hw_vpath_alarm_process.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.__vxge_hw_vpath_handle = type { i32 }

@VXGE_HW_OK = common dso_local global i32 0, align 4
@VXGE_HW_ERR_INVALID_HANDLE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vxge_hw_vpath_alarm_process(%struct.__vxge_hw_vpath_handle* %0, i32 %1) #0 {
  %3 = alloca %struct.__vxge_hw_vpath_handle*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.__vxge_hw_vpath_handle* %0, %struct.__vxge_hw_vpath_handle** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* @VXGE_HW_OK, align 4
  store i32 %6, i32* %5, align 4
  %7 = load %struct.__vxge_hw_vpath_handle*, %struct.__vxge_hw_vpath_handle** %3, align 8
  %8 = icmp eq %struct.__vxge_hw_vpath_handle* %7, null
  br i1 %8, label %9, label %11

9:                                                ; preds = %2
  %10 = load i32, i32* @VXGE_HW_ERR_INVALID_HANDLE, align 4
  store i32 %10, i32* %5, align 4
  br label %17

11:                                               ; preds = %2
  %12 = load %struct.__vxge_hw_vpath_handle*, %struct.__vxge_hw_vpath_handle** %3, align 8
  %13 = getelementptr inbounds %struct.__vxge_hw_vpath_handle, %struct.__vxge_hw_vpath_handle* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* %4, align 4
  %16 = call i32 @__vxge_hw_vpath_alarm_process(i32 %14, i32 %15)
  store i32 %16, i32* %5, align 4
  br label %17

17:                                               ; preds = %11, %9
  %18 = load i32, i32* %5, align 4
  ret i32 %18
}

declare dso_local i32 @__vxge_hw_vpath_alarm_process(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
